# Professor-Hawkeinstein

./: .dockerignore  .gitignore  .htaccess  .rsyncignore  ADVISOR_CONCURRENCY_AUDIT.md  ADVISOR_INSTANCE_API.md  ADVISOR_MIGRATION_SUMMARY.md  AGENT.md  AGENT_FACTORY_QUICKSTART.md  AGENT_SELECTION_IMPLEMENTATION.md  AGENT_TROUBLESHOOTING_LOG.md  API_VALIDATION_COMPLETE.md  ARCHITECTURE.md  ASSESSMENT_GENERATION_API.md  ASSESSMENT_GENERATION_SUMMARY.md  AUTH_FORMAT_CENTRALIZATION.md  COMPLETE_COURSE_PIPELINE.md  CONTENT_EXTRACTION_GUIDE.md  CONTENT_REVIEW_DEBUG.md  COURSE_AGENT_DEBUG.md  COURSE_METADATA_GUIDE.md  COURSE_OUTLINE_MODE_API.md  COURSE_PIPELINE_STATUS.md  DEPLOYMENT_ADVISOR_SYSTEM.md  DEPLOYMENT_COMPLETE.md  Dockerfile  FACIAL_RECOGNITION_GUIDE.md  FACIAL_RECOGNITION_SUMMARY.txt  FILE_SYNC_IMPLEMENTATION.md  FULL_COURSE_GENERATOR_MODE_API.md  FULL_COURSE_GENERATOR_SUMMARY.md  FUTURE_IMPROVEMENTS.md  IMPLEMENT_COURSE_AGENT.md  LESSON_GENERATOR_MODE_API.md  MEMORY_POLICY_AUDIT_SUMMARY.md  MEMORY_POLICY_QUICKREF.md  Makefile  OAUTH_HTTPS_FIX.md  PROJECT_OVERVIEW.md  Professor_Hawkeinstein.conf  (+53 more)
cpp_agent/: CMakeLists.txt  Dockerfile  README.md  agent_manager.cpp  agent_manager.h  config.docker.json  config.json  database.cpp  database.h  http_server.cpp  http_server.h  httplib.h  main.cpp  simple_agent.cpp
cpp_agent/include/: agent_manager.h  config.h  database.h  llamacpp_client.h  ollama_client.h  rag_engine.h
cpp_agent/src/: agent_manager.cpp  database.cpp  http_server.cpp  llamacpp_client.cpp  main.cpp  ollama_client.cpp  rag_engine.cpp  simple_server.cpp
(+531 files in other folders)
